# ghanili

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
lyrics_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
notebooks/: 01_eda.ipynb  02_index.ipynb  03_query.ipynb  04_qrels.ipynb
src/: main.py
src/static/: home.html
src/templates/: display_results.html
