[project]
name = "ghanili"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-stopwords>=0.4.3",
    "bm25s>=0.2.7.post1",
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "pyarabic>=0.6.15",
    "tashaphyne>=0.3.6",
]
